# proyecto_aprendizaje

./: .gitignore  README.md
PC/: requirements.txt
PC/models/: README.dataset.txt  README.roboflow.txt
PC/models/centernet_mobilenetv2_fpn_od/: tflite.py
PC/models/nanodet/: nanodet_inference.py  nanodet_m.py  nanodet_m_0.5x.pt
PC/models/nanodet_ncnn_model/: model.ncnn.param  model_ncnn.py  nanodet.torchscript.pnnx.onnx  nanodet.torchscript.pnnx.param  nanodet.torchscript_pnnx.py
PC/models/yolov5d_complete_ncnn_model/: metadata.yaml  model_ncnn.py
PC/models/yolov5d_reduced_ncnn_model/: metadata.yaml  model.ncnn.param  model_ncnn.py
PC/models/yolov5nN/: args.yaml  events.out.tfevents.1727362317.CARJEZ.16828.0  results.csv
PC/models/yolov5nd_reduced_ncnn_model/: model_ncnn.py
PC/models/yolov8nN/: args.yaml  events.out.tfevents.1727360327.CARJEZ.21480.0  results.csv
PC/scripts/: train_yolov5.py  train_yolov8.py
PC/utils/: compareWeights.py  export_ncnn.py  exportfileYolo.py
Raspberry/: requirements.txt  requirements_nanodet.txt
Raspberry/app/: kinectYoloMobileNet.py  kinectYoloNCNN.py  kinectYoloNCNNGame.py
export/freenect_dependencies/: install_freenect.sh  libfreenect.so.0  libfreenect_sync.so.0  readme.md
ros2_ws/install/: setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/log/: latest_build
ros2_ws/src/kinect_integration/: package.xml  setup.cfg  setup.py
ros2_ws/src/kinect_integration/kinect_integration/: frame_convert.py  kinectYoloNCNN.py  kinect_yolo_node.py
ros2_ws/src/kinect_integration/launch/: kinect_yolo_launch.py
(+35 files in other folders)
